# json-schema-autodocodec

./: .gitignore  Example.hs  autodojsonschema.cabal  dev-to-blog-post.md  justfile  shell.nix
test/: PersonSpec.hs
