cabal-version: 2.4
name: autodojsonschema
version: 0.1.0.0

executable autodojsonschema
  main-is: Example.hs
  build-depends:
    base ^>=4.18,
    autodocodec,
    autodocodec-schema,
    aeson,
    aeson-pretty,
    bytestring
  default-language: Haskell2010

test-suite autodojsonschema-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    base ^>=4.18,
    autodocodec,
    autodocodec-schema,
    aeson,
    hspec,
    hspec-discover
  other-modules:
    PersonSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover